# VisualBoyAdvance

./: .gitignore  AUTHORS  COPYRIGHT.TXT  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README-win.txt  README.CVS  README.md  VERSION  aclocal.m4  configure  configure.in  mkinstalldirs
m4/: Makefile.in
po/: POTFILES.in  fr.gmo  fr.po  vba-1.7.2.pot
qt/: .cvsignore  VisualBoyAdvance.pro
src/: 2xSaI.c  2xSaI.cpp  AutoBuild.h  CheatSearch.cpp  CheatSearch.h  Cheats.c  Cheats.cpp  Cheats.h  EEprom.c  EEprom.cpp  EEprom.h  Flash.c  Flash.cpp  Flash.h  Font.cpp  Font.h  GBA.c  GBA.cpp  GBA.h  GBAinline.h  GBAmyrom.c  Gfx.c  Gfx.cpp  Gfx.h  Globals.c  Globals.cpp  Globals.h  Makefile.am  Makefile.in  Mode0.c  Mode0.cpp  Mode1.c  Mode1.cpp  Mode2.c  Mode2.cpp  Mode3.c  Mode3.cpp  Mode4.c  Mode4.cpp  Mode5.c  (+67 more)
src/gb/: GB.c  GB.cpp  GB.h  Makefile.am  Makefile.in  gbCheats.c  gbCheats.cpp  gbCheats.h  gbCodes.h  gbCodesCB.h  gbDis.cpp  gbGfx.cpp  gbGlobals.cpp  gbGlobals.h  gbMemory.cpp  gbMemory.h  gbPrinter.cpp  gbPrinter.h  gbSGB.c  gbSGB.cpp  gbSGB.h  gbSound.c  gbSound.cpp  gbSound.h
src/gp/: GP.cpp  GP.h  Makefile.am  Makefile.in  gpGfxRender.cpp  gpIO.h
src/gtk/: Makefile.am  Makefile.in  configfile.cpp  configfile.h  filters.cpp  filters.h  input.h  intl.h  joypadconfig.cpp  main.cpp  screenarea.cpp  screenarea.h  sigccompat.h  system.cpp  tools.cpp  tools.h  vba.glade  window.cpp  window.h  windowcallbacks.cpp
src/gtk/images/: Makefile.in
src/i386/: 2xSaImmx.asm  Makefile.am  Makefile.in
src/prof/: Makefile.am  Makefile.in  prof.cpp  prof.h
src/qt/: addcbacode.ui  addcbacode.ui.h  addgbacode.ui  addgbacode.ui.h  addgsacode.ui  addgsacode.ui.h  directories.ui  directories.ui.h  gbacheats.ui  gbacheats.ui.h  gbacheatsearch.ui  gbacheatsearch.ui.h  loggingdlg.ui  loggingdlg.ui.h  main.cpp  qtGUI.cpp  qtGUI.h
src/sdl/: Makefile.am  Makefile.in  SDL.c  SDL.cpp  TestEmu.c  TestEmu.cpp  debugger.c  debugger.cpp
src/win32/: AVIWrite.cpp  AVIWrite.h  AboutDialog.cpp  AboutDialog.h  AboutDlg.cpp  AccelEditor.cpp  AccelEditor.h  AcceleratorManager.cpp  AcceleratorManager.h  Associate.cpp  Associate.h  BitmapControl.cpp  BitmapControl.h  BugReport.cpp  BugReport.h  CmdAccelOb.cpp  CmdAccelOb.h  ColorButton.cpp  ColorButton.h  ColorControl.cpp  ColorControl.h  CommDlg.cpp  CommDlg.h  Commands.cpp  Controls.cpp  Controls.h  Direct3D.cpp  DirectDraw.cpp  DirectInput.cpp  DirectSound.cpp  Directories.cpp  Directories.h  DirectoriesDlg.cpp  Disassemble.cpp  Disassemble.h  Display.cpp  Display.h  ExportGSASnapshot.cpp  ExportGSASnapshot.h  FileDlg.cpp  (+121 more)
win32/: .cvsignore  GBA.dsp  GBA.dsw  GBA.vcproj  Makefile.am  Makefile.in  gba_sdl.dsp  gba_sdl.vcproj  vba_vs2005.sln  vba_vs2005.vcproj
win32/SDL-1.2.2/include/: SDL.h  SDL_active.h  SDL_audio.h  SDL_byteorder.h  SDL_cdrom.h  SDL_copying.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_joystick.h  SDL_keyboard.h  SDL_keysym.h  SDL_main.h  SDL_mouse.h  SDL_mutex.h  SDL_quit.h  SDL_rwops.h  SDL_syswm.h  SDL_thread.h  SDL_timer.h  SDL_types.h  SDL_version.h  SDL_video.h
win32/SDL-1.2.2/lib/: SDL.lib  SDLmain.lib
win32/dependencies/cximage/: .cvsignore  cximage.vcproj  tif_xfile.cpp  ximacfg.h  ximajas.h  ximajpg.cpp  ximajpg.h  ximapng.h  ximatif.cpp  ximatif.h
win32/dependencies/libjasper/: .cvsignore  libjasper.vcproj
win32/dependencies/libjasper/base/: jas_cm.c  jas_getopt.c  jas_icc.c  jas_image.c  jas_init.c  jas_malloc.c  jas_seq.c  jas_stream.c  jas_string.c  jas_tvp.c
win32/dependencies/libjasper/bmp/: bmp_cod.c  bmp_cod.h  bmp_dec.c  bmp_enc.c
win32/dependencies/libjasper/include/jasper/: jas_cm.h  jas_config.h  (+13 more)
win32/dependencies/libjasper/jp2/: jp2_cod.c  jp2_cod.h  jp2_dec.c  jp2_enc.c
win32/dependencies/libjasper/jpc/: jpc_bs.c  jpc_bs.h  jpc_cod.h  jpc_cs.c  jpc_cs.h  jpc_dec.c  jpc_dec.h  jpc_enc.c  jpc_enc.h  jpc_fix.h  jpc_flt.h  jpc_math.c  jpc_mct.c  jpc_mct.h  jpc_mqcod.c  jpc_mqcod.h  jpc_mqdec.c  jpc_mqdec.h  jpc_mqenc.c  jpc_mqenc.h  jpc_qmfb.c  jpc_qmfb.h  jpc_t1cod.c  jpc_t1cod.h  jpc_t1dec.c  jpc_t1dec.h  jpc_t1enc.c  jpc_t1enc.h  jpc_t2cod.c  jpc_t2cod.h  jpc_t2dec.c  jpc_t2dec.h  jpc_t2enc.c  jpc_t2enc.h  jpc_tagtree.c  jpc_tagtree.h  jpc_tsfb.c  jpc_tsfb.h  jpc_util.c
win32/dependencies/libjasper/jpg/: jpg_cod.h
win32/dependencies/libjasper/pgx/: pgx_cod.h
win32/dependencies/libjasper/pnm/: pnm_cod.c  pnm_cod.h  pnm_dec.c  pnm_enc.c
win32/dependencies/libjasper/ras/: ras_cod.c  ras_cod.h  ras_dec.c  ras_enc.c
win32/dependencies/libjpeg/: .cvsignore  jmorecfg.h  libjpeg.vcproj
win32/dependencies/libpng/: libpng.vcproj
win32/dependencies/libtiff/: .cvsignore  libtiff.vcproj  t4.h  tif_aux.c  tif_close.c  tif_codec.c  tif_color.c  tif_compress.c  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_dumpmode.c  tif_error.c  tif_extension.c  tif_fax3.c  tif_fax3.h  tif_flush.c  tif_getimage.c  tif_jpeg.c  tif_luv.c  tif_lzw.c  tif_next.c  tif_ojpeg.c  tif_open.c  tif_packbits.c  tif_pixarlog.c  tif_predict.c  tif_predict.h  tif_print.c  tif_read.c  tif_stream.cxx  tif_strip.c  tif_swab.c  tif_thunder.c  tif_tile.c  tif_version.c  tif_warning.c  tif_write.c  (+4 more)
win32/dependencies/sdl/: SDL.h  SDL_active.h  SDL_audio.h  SDL_byteorder.h  SDL_cdrom.h  SDL_copying.h  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_joystick.h  SDL_keyboard.h  SDL_keysym.h  SDL_loadso.h  SDL_main.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl.h  SDL_quit.h  SDL_rwops.h  SDL_syswm.h  SDL_thread.h  SDL_timer.h  SDL_types.h  SDL_version.h  SDL_video.h
win32/dependencies/sdl/Debug/: SDL.lib  SDLmain.lib
win32/dependencies/sdl/Release/: SDL.lib  SDLmain.lib
win32/dependencies/zlib/: zlib.vcproj
win32/include/cximage/: xfile.h  ximabmp.h  ximadefs.h  ximage.h  ximagif.h  ximaico.h  ximaiter.h  ximaj2k.h  ximajas.h  ximajbg.h  ximajpg.h  ximamng.h  ximapcx.h  ximapng.h  ximatga.h  ximatif.h  ximawbmp.h  xmemfile.h
win32/include/zlib/: zconf.h  zlib.h  zutil.h
win32/lib/win32/: CxImage.lib  jpeg.lib  libpng.lib  libpngMD.lib  zlib.lib  zlibMD.lib
